--- a/exercises/ztoh/sheetsL1.html
+++ b/exercises/ztoh/sheetsL1.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="../../css/estilo.css" />
         <script src="../../script/sheetsList.js"></script>
         <link rel="stylesheet" href="../../css/all.css" />
-        
+        <meta charset="UTF-8">
     </head>
 
     <body onload="SelectSheet(0)">
