--- a/index.html
+++ b/index.html
@@ -4,37 +4,38 @@
 <head>
     <link rel="stylesheet" href="css/bulma.css" />
     <link rel="stylesheet" href="css/estilo.css" />
+    <meta charset="UTF-8">
 </head>
 
 <body>
     <div class="cheio" id="Orange">
         <h1 class="tituloPrincipal">
-            O Livro Definitivo de Música
+            O Livro Definitivo de MÃºsica
         </h1>
         <h3 class="subtituloPrincipal">
-            Uma fonte de informação gigantesca!
+            Uma fonte de informaÃ§Ã£o gigantesca!
         </h3>
     </div>
 
     <section class="section">
         <div class="container">
             <h3 class="subtituloPrincipal textoPreto">Agora em forma de site!</h3>
-            <p>Isto permite com que consiga editar mais facilmente e adicionar mais coisas ao longo do tempo. Posso colocar mais imagens e além disso, consigo adicionar muitos mais elementos interativos como sons e até videos!</p>
+            <p>Isto permite com que consiga editar mais facilmente e adicionar mais coisas ao longo do tempo. Posso colocar mais imagens e alÃ©m disso, consigo adicionar muitos mais elementos interativos como sons e atÃ© videos!</p>
         </div>
 
     </section>
     <section class="section">
         <div class="container">
-            <h3 class="subtituloPrincipal textoPreto">Lista de capítulos:</h3>
+            <h3 class="subtituloPrincipal textoPreto">Lista de capÃ­tulos:</h3>
             <ul>
                 <li><a class="button is-primary botaoGrande" href="cap/1/pautas.html">1. Pautas e Claves</a></li>
                 <li><a class="button is-primary botaoGrande" href="cap/2/ident.html">2. Identificar notas na pauta</a></li>
                 <li><a class="button is-primary botaoGrande desativado">3. Escalas Maiores</a></li>
                 <li><a class="button is-primary botaoGrande desativado">4. Compassos e Tempos</a></li>
-                <li><a class="button is-primary botaoGrande desativado">5. Duração das Notas</a></li>
+                <li><a class="button is-primary botaoGrande desativado">5. DuraÃ§Ã£o das Notas</a></li>
                 <li><a class="button is-primary botaoGrande desativado">6. Escalas Menores</a></li>
                 <li><a class="button is-primary botaoGrande desativado">7. Intervalos das Notas</a></li>
-                <li><a class="button is-primary botaoGrande" href="cap/8/melod.html">8. Noções de Melodia</a></li>
+                <li><a class="button is-primary botaoGrande" href="cap/8/melod.html">8. NoÃ§Ãµes de Melodia</a></li>
             </ul>
 
         </div>
@@ -42,13 +43,13 @@
     
     <section class="section">
         <div class="container">
-            <h3 class="subtituloPrincipal textoPreto">Seção de Exercícios:</h3>
-            <p>Uma coleção de exercícios para serem realizados a qualquer altura no piano, ótimo para desenvolver rapidamente a capacidade de tocar piano.</p>
+            <h3 class="subtituloPrincipal textoPreto">SeÃ§Ã£o de ExercÃ­cios:</h3>
+            <p>Uma coleÃ§Ã£o de exercÃ­cios para serem realizados a qualquer altura no piano, Ã³timo para desenvolver rapidamente a capacidade de tocar piano.</p>
             <ul>
                 <li><a class="button is-primary botaoGrande" href="exercises/sight/sightReading.html">1. Leitura de Pautas (sight reading)</a></li>
-                <li><a class="button is-primary botaoGrande" href="exercises/ztoh/ztohIntro.html">2. Piano Iniciante a Pró</a></li>
-                <li><a class="button is-primary botaoGrande desativado">3. Exercícios de ritmos</a></li>
-                <li><a class="button is-primary botaoGrande desativado">4. Exercícios de treino de ouvido</a></li>
+                <li><a class="button is-primary botaoGrande" href="exercises/ztoh/ztohIntro.html">2. Piano Iniciante a PrÃ³</a></li>
+                <li><a class="button is-primary botaoGrande desativado">3. ExercÃ­cios de ritmos</a></li>
+                <li><a class="button is-primary botaoGrande desativado">4. ExercÃ­cios de treino de ouvido</a></li>
             </ul>
 
         </div>
