--- a/cap/2/ident.html
+++ b/cap/2/ident.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="../../css/bulma.css" />
         <link rel="stylesheet" href="../../css/estilo.css" />
         <link rel="stylesheet" href="../../css/all.css" />
-        
+        <meta charset="UTF-8">
     </head>
 
     <body>
