--- a/exercises/sight/sightL1.html
+++ b/exercises/sight/sightL1.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="../../css/estilo.css" />
         <script src="../../script/randomSight.js"></script>
         <link rel="stylesheet" href="../../css/all.css" />
-        
+        <meta charset="UTF-8">
     </head>
 
     <body onload="Start()">
