--- a/exercises/sight/sightReading.html
+++ b/exercises/sight/sightReading.html
@@ -4,7 +4,7 @@
     <head>        
         <link rel="stylesheet" href="../../css/bulma.css" />
         <link rel="stylesheet" href="../../css/estilo.css" />
-        
+        <meta charset="UTF-8">
     </head>
 
     <body>
