- melhoramentos nos tamanhos dos elementos. - resolvido bug ao escolher um exercicio, dropdown nao atualizava

--- a/cap/2/ident.html
+++ b/cap/2/ident.html
@@ -28,7 +28,7 @@ parece difícil mas aos poucos se ganha velocidade. É importante
 identificar notas com alguma velocidade porque a identificação é só a
 primeira parte do que temos que fazer ao tocar uma música, que pode ser
 dividido em 3 partes:</p>
-            <h3 class="subtituloPrincipal textoPreto">As 3 partes de tocar uma música</h3>
+            <h3 class="subtituloPrincipal textoPreto sublinhado sublinhado">As 3 partes de tocar uma música</h3>
             <ul>
             <li><p><i class="fas fa-circle"></i>Identificação da nota/notas que vem a seguir, qual a sua duração
 /dinâmicas/ornamentos e qual a sua relação com o que aconteceu
@@ -65,7 +65,7 @@ Estas 2 pautas de piano juntas chama-se “grand staff”. Vamos começar
 com as primeiras imagens e iniciar alguns métodos rápidos para identificar
 notas.</p>
             
-            <h3 class="subtituloPrincipal textoPreto">A primeira visão geral de uma pauta</h3>
+            <h3 class="subtituloPrincipal textoPreto sublinhado sublinhado">A primeira visão geral de uma pauta</h3>
             <img src="../../img/cap2/001.png">
             <p>Esta é a “grand staff”, a pauta de piano. Como podemos ver, são 2 pautas
 com claves diferentes em cima e em baixo. Logo do lado esquerdo
@@ -126,7 +126,7 @@ Agora para identificar uma nota desconhecida, tudo o que temos que fazer
         
         <section class="section">
             <div class="container">
-                <h3 class="subtituloPrincipal textoPreto">Identificar notas desconhecidas</h3>
+                <h3 class="subtituloPrincipal textoPreto sublinhado sublinhado">Identificar notas desconhecidas</h3>
                 <img src="../../img/cap2/008.png">
                 <p>Como se identifica esta nota? A maneira mais simples é contar de baixo
 para cima, porque é mais fácil dizer dó, ré, mi, fá, sol, etc. Do que ao
@@ -163,7 +163,7 @@ seguinte: <i>Guiar sempre pelas teclas brancas primeiro e só depois é que
                     “adicionamos” o acidental, movendo 1 nota para a frente ou para trás.</i>
 Neste caso contaríamos pelas teclas brancas por ex: a partir do dó 4, até
 chegar ao lá e depois é que fazíamos o passinho correto para o acidental.</p>
-                <h3 class="subtituloPrincipal textoPreto">Exemplo para clave de Fá</h3>
+                <h3 class="subtituloPrincipal textoPreto sublinhado sublinhado">Exemplo para clave de Fá</h3>
                 <img src="../../img/cap2/016.png">
                 <p>Apesar da clave ser diferente, o processo é igual. Nós já criamos vários
 pontos de referência por isso só temos que fazer exatamente a mesma
