--- a/cap/8/melod.html
+++ b/cap/8/melod.html
@@ -54,7 +54,7 @@ deles:</p>
         
         <section class="section">
         <div class="container">
-            <h3 class="subtituloPrincipal textoPreto">Exemplos de melodias simples</h3>
+            <h3 class="subtituloPrincipal textoPreto sublinhado">Exemplos de melodias simples</h3>
             <img src="../../img/cap8/002.png">
             <audio controls>
                 <source src="../../snd/cap8/08_01.mp3" type="audio/mpeg"/>
@@ -133,7 +133,7 @@ há sempre detalhes novos para serem descobertos. Esta arte chama-se
         
         <section class="section">
             <div class="container">
-            <h3 class="subtituloPrincipal textoPreto">Simples regras para uma boa melodia</h3>
+            <h3 class="subtituloPrincipal textoPreto sublinhado">Simples regras para uma boa melodia</h3>
                 <p>Isto foi só uma pequena introdução ao mundo das melodias, ainda há
 muito para descobrir. Ainda só falei de melodias que andavam a passo,
 mas claro que não é só isso que existe. As melodias podem e devem saltar
@@ -163,7 +163,7 @@ ande em passo na direção contrária e é exatamente isso que acontece.</p>
                 <p>Aqui também se nota em algo que se pode chamar de “linha melódica”,
 que é um conceito importante. A linha melódica tem que ser interessante e
 memorável, para fazer isso existem algumas noções:</p>
-                <h3 class="subtituloPrincipal textoPreto">Noções para uma linha melódica interessante</h3>
+                <h3 class="subtituloPrincipal textoPreto sublinhado">Noções para uma linha melódica interessante</h3>
                 <ul>
                     <li><p><i class="fas fa-circle"></i>Tem que existir uma noção de desenvolvimento em que se vai para algum
 sítio, e no fim volta outra vez para onde começamos.</li>
