--- a/exercises/ztoh/sheetsL1.html
+++ b/exercises/ztoh/sheetsL1.html
@@ -22,7 +22,7 @@
         
         <section class="section">
         <div class="container">
-            <h3 class="subtituloPrincipal textoPreto">Pauta:</h3>
+            <h3 class="subtituloPrincipal textoPreto sublinhado">Pauta:</h3>
                         
             <div class="select is-multiple is-medium">
                 <p>Seleciona uma pauta:</p>
