--- a/exercises/ztoh/ztohIntro.html
+++ b/exercises/ztoh/ztohIntro.html
@@ -20,7 +20,7 @@
         
         <section class="section">
         <div class="container">
-            <h3 class="subtituloPrincipal textoPreto">Resumo:</h3>
+            <h3 class="subtituloPrincipal textoPreto sublinhado">Resumo:</h3>
             <p>Aqui começa a tua jornada! Nesta seção podes encontrar muitos exercícios e peças divididas em diversas categorias.</p>
             <p>Podes apenas praticar exercícios de técnica como escalas, velocidade, independência de mãos, fortalecimento dos dedos, etc. Mas também podes tocar peças mais musicais onde treinas a tua postura e capacidade de interpretação.</p>
             <p>Tudo isto está dividido em vários níveis de dificuldade. Nível 1 é próprio para iniciantes, os restantes níveis já são mais complicados, mas não tenhas medo de espreitar e tentar!</p>
@@ -29,7 +29,7 @@
         
         <section class="section">
         <div class="container">
-            <h3 class="subtituloPrincipal textoPreto">Níveis:</h3>
+            <h3 class="subtituloPrincipal textoPreto sublinhado">Níveis:</h3>
             <ul>
                 <li><a class="button is-primary botaoGrande" href="../../exercises/ztoh/sheetsL1.html">Nível 1 (Muito Fácil)</a></li>
                 <li><a class="button is-primary botaoGrande desativado">Nível 2 (Normal)</a></li>
