--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 
     <section class="section">
         <div class="container">
-            <h3 class="subtituloPrincipal textoPreto">Agora em forma de site!</h3>
+            <h3 class="subtituloPrincipal textoPreto sublinhado">Agora em forma de site!</h3>
             <p>Isto permite com que consiga editar mais facilmente e adicionar mais coisas ao longo do tempo. Posso colocar mais imagens e além disso, consigo adicionar muitos mais elementos interativos como sons e até videos!</p>
         </div>
 
     </section>
     <section class="section">
         <div class="container">
-            <h3 class="subtituloPrincipal textoPreto">Lista de capítulos:</h3>
+            <h3 class="subtituloPrincipal textoPreto sublinhado">Lista de capítulos:</h3>
             <ul>
                 <li><a class="button is-primary botaoGrande" href="cap/1/pautas.html">1. Pautas e Claves</a></li>
                 <li><a class="button is-primary botaoGrande" href="cap/2/ident.html">2. Identificar notas na pauta</a></li>
@@ -43,7 +43,7 @@
     
     <section class="section">
         <div class="container">
-            <h3 class="subtituloPrincipal textoPreto">Seção de Exercícios:</h3>
+            <h3 class="subtituloPrincipal textoPreto sublinhado">Seção de Exercícios:</h3>
             <p>Uma coleção de exercícios para serem realizados a qualquer altura no piano, ótimo para desenvolver rapidamente a capacidade de tocar piano.</p>
             <ul>
                 <li><a class="button is-primary botaoGrande" href="exercises/sight/sightReading.html">1. Leitura de Pautas (sight reading)</a></li>
