--- a/exercises/sight/sightL1.html
+++ b/exercises/sight/sightL1.html
@@ -22,12 +22,12 @@
         
         <section class="section">
         <div class="container">
-            <h3 class="subtituloPrincipal textoPreto">Observa atentamente a imagem abaixo:</h3>
+            <h3 class="subtituloPrincipal textoPreto sublinhado">Observa atentamente a imagem abaixo:</h3>
             <div class="select is-multiple is-medium">
                 <p>Seleciona uma música da lista ou clica no botão para selecionar uma ao calhas:</p>
                 <select name="sheets" id="sheetList" onchange="ChangeSheet(this)">
             </select>
-                            <button class="button is-link" onclick="choosePic()"><a><i class="fas fa-redo"></i>Música Aleatória</a></button>
+                <button class="button is-link" onclick="chooseRandomPic()"><a><i class="fas fa-redo"></i>Música Aleatória</a></button>
                 </div>
             <img id="sightIMG" src="">
             <p>Quando achares que consegues tocar prime o botao play abaixo para iniciar a banda e tocar contigo!</p>
