--- a/exercises/sight/sightReading.html
+++ b/exercises/sight/sightReading.html
@@ -20,7 +20,7 @@
         
         <section class="section">
         <div class="container">
-            <h3 class="subtituloPrincipal textoPreto">Resumo:</h3>
+            <h3 class="subtituloPrincipal textoPreto sublinhado">Resumo:</h3>
             <p>Estes exercícios são feitos para treinar a capacidade de olhar para uma pauta que nunca se viu e a executar na melhor forma possível, por isso é que se chama Sight Reading (leitura de visão). Esta capacidade faz com que se consiga tocar ou acompanhar praticamente qualquer música com bastante facilidade. Para treinar isso existem vários níveis que se pode escolher.
             Cada nível aumenta a dificuldade do exercício. Cada nível tem bastantes pautas que são escolhidas ao calhas.</p>
             <p>Quando a pauta aparece observa a escala / velocidade / ritmos e toca sozinho o tempo que quiseres.</p>
@@ -31,7 +31,7 @@
         
         <section class="section">
         <div class="container">
-            <h3 class="subtituloPrincipal textoPreto">Níveis:</h3>
+            <h3 class="subtituloPrincipal textoPreto sublinhado">Níveis:</h3>
             <ul>
                 <li><a class="button is-primary botaoGrande" href="../../exercises/sight/sightL1.html">Nível 1 (Muito Fácil)</a></li>
                 <li><a class="button is-primary botaoGrande desativado">Nível 2 (Normal)</a></li>
